# MATAM-HW2

./: .gitignore
dry/: CMakeLists.txt  Pirate.cpp  Pirate.h  log.txt  main.cpp
wet/: CMakeLists.txt  MataMvidia.cpp  MataMvidia.h  Matrix.cpp  Matrix.h  tests.cpp
